@startuml
    class Drawing {
        ~ lines: LinkedHashSet<Line>
        + drawPolygon(LinkedHashSet<Line>): void
        - perimeter(Polygon): double
        + {static} main(String[]): void
    }
    class Point {
        - x: int
        - y: int
        + <<Create>> Point(int,int)
        + {static} distance(Point,Point): double
        + toString(): String
    }
    class Line {
        ~ start: Point
        - {static} classID: int
        - objID: int
        + <<Create>> Line(Point,Point)
        + distance(): double
        + toString(): String
    }
    class Polygon {
        - polygon: LinkedHashSet<Line>
        - objID: int
        - {static} classID: int
        ~ it: Iterator<Line>
        + <<Create>> Polygon(LinkedHashSet<Line>)
        + getLine(): Iterator<Line>
        + {static} classID(): int
        + toString(): String
    }

    Drawing --> Line
    Drawing --> Polygon
    Drawing --> Point
    Line *-- Point
    Polygon *-- Line
@enduml